# typedb-jupyter

./: README.md  RELEASE_NOTES.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint.yml  ruff.yml
src/: Sample.ipynb  graphs.ipynb
src/tql/: __init__.py  connection.py  exception.py  magic.py  query.py
src/typedb_jupyter/: __init__.py  connection.py  display.py  exception.py  magic.py  query.py  response.py  subcommands.py
src/typedb_jupyter/graph/: __init__.py  answer.py  query.py
src/typedb_jupyter/utils/: display.py  ir.py  parser.py
