[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "typedb-jupyter"
version = "0.3"
description = "Jupyter connector for TypeDB"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "James Whiteside", email = "james.whiteside@vaticle.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: IPython",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
dependencies = [
    "typedb-client~=2.17",
    "ipython"
]

[project.urls]
"Repository" = "https://github.com/typedb-osi/typedb-jupyter"
"Release notes" = "https://github.com/typedb-osi/typedb-jupyter/blob/main/RELEASE_NOTES.md"
"TypeDB" = "https://github.com/vaticle/typedb"
"Vaticle" = "https://vaticle.com/"
